Added Statistics fragment Added a third fragment as a placeholder for reports Using MPAndroidChart (https://github.com/PhilJay/MPAndroidChart/)

--- a/app/src/main/res/layout/fragment_real_time_data.xml
+++ b/app/src/main/res/layout/fragment_real_time_data.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold"
-        android:text="TEMPERATURA_TXT"
+        android:text=""
         android:id="@+id/section_tempperatura_txt"
         android:layout_alignBottom="@+id/section_tempperatura_label"
         android:layout_alignRight="@+id/vpPager"
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold"
-        android:text="AMONIA_TXT"
+        android:text=""
         android:id="@+id/section_amonia_txt"
         android:layout_alignBottom="@+id/section_amonia_label"
         android:layout_alignRight="@+id/vpPager"
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold"
-        android:text="OXIGENIO_TXT"
+        android:text=""
         android:id="@+id/section_oxigenio_txt"
         android:layout_alignBottom="@+id/section_oxigenio_label"
         android:layout_alignRight="@+id/vpPager"
@@ -93,7 +93,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold"
-        android:text="PH_TEXT"
+        android:text=""
         android:id="@+id/section_ph_txt"
         android:layout_alignBottom="@+id/section_ph_label"
         android:layout_alignRight="@+id/vpPager"
@@ -114,7 +114,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold"
-        android:text="NITRITO_TXT"
+        android:text=""
         android:id="@+id/section_nitrito_txt"
         android:layout_alignBottom="@+id/section_nitrito_label"
         android:layout_alignRight="@+id/vpPager"
@@ -135,7 +135,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold"
-        android:text="SOLIDOS_TXT"
+        android:text=""
         android:id="@+id/section_solidos_txt"
         android:layout_alignBottom="@+id/section_solidos_label"
         android:layout_alignRight="@+id/vpPager"
@@ -156,7 +156,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold"
-        android:text="CO2_TXT"
+        android:text=""
         android:id="@+id/section_co2_txt"
         android:layout_alignBottom="@+id/section_co2_label"
         android:layout_alignRight="@+id/vpPager"
@@ -177,7 +177,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold"
-        android:text="SALINIDADE_TXT"
+        android:text=""
         android:id="@+id/section_salinidade_txt"
         android:layout_alignBottom="@+id/section_salinidade_label"
         android:layout_alignRight="@+id/vpPager"
@@ -188,7 +188,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold"
-        android:text="%"
+        android:text="Loading data..."
         android:id="@+id/section_porcentagem"
         android:layout_marginTop="56dp"
         android:layout_below="@+id/section_salinidade_label"
